finish custom tag pagination